examples/jp_chkt_01.asl
func main()
  var n : int
  var m : int
  var i : int
  var b : bool
  var f : float
  var c : char
  n = 2 - n/3;
  m = -n*5 - (m-1);
  b = n+m >= i or not b and f+1 or n<2;
  n = n > 3 - - 5;
  f = n*n - 1.9 - b;
  f = f/2;
  b = b or not q;
  b = 45;
  c = 'a';
  c = (d <= 6) + 'b';
endfunc
